--- a/src/index.html
+++ b/src/index.html
@@ -17,15 +17,23 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!--<include src="./partials/example.html"></include>-->
     <div class="container search">
-      <form class="search__form" id="search-form">
+      <form class="search-form" id="search-form">
         <input
-          class="search__input"
+          class="search-input"
           type="text"
           name="searchQuery"
           autocomplete="off"
           placeholder="Search images..."
         />
-        <button class="search__btn" type="submit">Search</button>
+        <button class="search-btn" type="submit">
+          <img
+            class="search__icon"
+            src="./images/search.svg"
+            alt="search"
+            width="30"
+            height="30"
+          />
+        </button>
       </form>
     </div>
     <div class="gallery"></div>
