--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" /> -->
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
-    <!-- <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&family=Titan+One&display=swap"
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Lobster&family=Raleway:wght@700&family=Roboto:ital,wght@0,100;0,300;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Titan+One&display=swap"
       rel="stylesheet"
-    /> -->
+    />
+
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <!--<include src="./partials/example.html"></include>-->
-    <div class="container search">
-      <form class="search-form" id="search-form">
+
+    <form class="search-form" id="search-form">
+      <div class="thumb">
         <input
           class="search-input"
           type="text"
@@ -34,8 +35,9 @@
             height="30"
           />
         </button>
-      </form>
-    </div>
+      </div>
+    </form>
+    <!--</div>-->>
     <div class="gallery"></div>
     <button type="button" class="load-more unvisible">Load more</button>
   </body>
