--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,9 @@
         </button>
       </div>
     </form>
-    <!--</div>-->>
-    <div class="gallery"></div>
+    <div class="container">
+      <div class="gallery"></div>
+    </div>
     <button type="button" class="load-more unvisible">Load more</button>
   </body>
 </html>
